// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 1`] = `
{
  "loc": {
    "end": {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": 0,
  "value": " ",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 2`] = `
{
  "loc": {
    "end": {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "start": {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
  },
  "type": 4,
  "value": "%",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 3`] = `
{
  "loc": {
    "end": {
      "column": 4,
      "line": 1,
      "offset": 3,
    },
    "start": {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
  },
  "type": 2,
  "value": "{",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 4`] = `
{
  "loc": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": {
      "column": 4,
      "line": 1,
      "offset": 3,
    },
  },
  "type": 5,
  "value": "action",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 5`] = `
{
  "loc": {
    "end": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "start": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
  },
  "type": 3,
  "value": "}",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 6`] = `
{
  "loc": {
    "end": {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "start": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
  },
  "type": 0,
  "value": " issue %s ",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 7`] = `
{
  "loc": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
  },
  "type": 4,
  "value": "%",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 8`] = `
{
  "loc": {
    "end": {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
  },
  "type": 2,
  "value": "{",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 9`] = `
{
  "loc": {
    "end": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "start": {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
  },
  "type": 5,
  "value": "code",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 10`] = `
{
  "loc": {
    "end": {
      "column": 28,
      "line": 1,
      "offset": 27,
    },
    "start": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
  },
  "type": 3,
  "value": "}",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 11`] = `
{
  "loc": {
    "end": {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "start": {
      "column": 28,
      "line": 1,
      "offset": 27,
    },
  },
  "type": 0,
  "value": " !",
}
`;

exports[`modulo cases > multiple >  %{action} issue %s %{code} ! 12`] = `
{
  "loc": {
    "end": {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "start": {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
  },
  "type": 14,
}
`;
